Agregada barra lateral de inicio

--- a/App/index.html
+++ b/App/index.html
@@ -12,13 +12,13 @@
 </head>
 <body>
 	<header>
-		<div class="container-fluid">
+		<div class="container">
 				<h1>ATV Rent a Car</h1>
 		</div>
 	</header>
 
-	<nav class="navbar navbar-default navbar-inverse">
-	  <div class="container-fluid">
+	<nav class="navbar navbar-default">
+	  <div class="container">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
 	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -58,7 +58,7 @@
 				    </div>
 				  </div>
 				  <div class="form-group">
-				    <div class="col-sm-offset-1 col-sm-10">
+				    <div class="col-sm-offset-1 col-sm-1">
 				      <button type="submit" class="btn btn-default">Sign in</button>
 				    </div>
 				  </div>
@@ -69,6 +69,26 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>		
+	
+	<div class="container">
+		<div class="row">
+			<lateral class="col-md-3">
+				<div class="btn-group-vertical" role="group" aria-label="...">
+				  	<ul class="nav nav-pills nav-stacked">
+					  <li class="letraslateral" role="presentation"><a href="#">Quiénes somos</a></li>
+					  <li role="presentation"><a href="#">Preguntas frecuentes</a></li>
+					  <li role="presentation"><a href="#">Contacto</a></li>
+					  <li role="presentation"><a href="#">Términos y condiciones</a></li>
+					</ul>
+				</div>				
+			</lateral>
+			<article class="col-md-9">
+				<p>
+				</p>				
+			</article>
+		</div>		
+	</div>
+
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
