--- a/App/index.html
+++ b/App/index.html
@@ -12,62 +12,75 @@
 </head>
 <body>
 	<header>
+		<br>
 		<div class="container">
-				<h1>ATV Rent a Car</h1>
+			<div class="row">
+				<logo class="col-xs-12 col-md-12 text-center">
+					<img src="img/logo.jpg" alt="..." class="img-rounded">
+				</logo>	
+			</div>				
 		</div>
+		<br>
+		<div class="container">
+			<div class="row">
+				<titulo class="col-xs-12 col-md-12 text-center">
+					<img src="img/nombre.jpg" alt="..." class="img-rounded">
+				</titulo>					
+			</div>
+		</div>
+		<br>
 	</header>
 
 	<nav class="navbar navbar-default">
-	  <div class="container">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="#">ATV Rent a Car</a>
-	    </div>
+		<div class="container">
+		    <!-- Brand and toggle get grouped for better mobile display -->
+		    <div class="navbar-header">
+			    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+			        <span class="sr-only">Toggle navigation</span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			    </button>
+			    <a class="navbar-brand" href="#">ATV Rent a Car</a>
+		    </div>
 
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav">
-		    <li class="active"><a href="#">Inicio <span class="sr-only">(current)</span></a></li>	  
-			<li><a href="#">Flota</a></li>
-			<li><a href="#">Reserva</a></li>
-			<li><a href="#">Empresas</a></li> 	        
-	      </ul>
-
-	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#">Acceso Empleado</a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Acceso Administrador <span class="caret"></span></a>
-	          <ul class="dropdown-menu" role="menu">
-	            <form class="form-horizontal">
-				  <div class="form-group">
-				    <label for="inputEmail3" class="col-sm-1 control-label">Usuario</label>
-				    <div class="col-sm-10">
-				      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-				    </div>
-				  </div>
-				  <div class="form-group">
-				    <label for="inputPassword3" class="col-sm-1 control-label">Contraseña</label>
-				    <div class="col-sm-10">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-				    </div>
-				  </div>
-				  <div class="form-group">
-				    <div class="col-sm-offset-1 col-sm-1">
-				      <button type="submit" class="btn btn-default">Sign in</button>
-				    </div>
-				  </div>
-				</form>
-	          </ul>
-	        </li>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
+		    <!-- Collect the nav links, forms, and other content for toggling -->
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			    <ul class="nav navbar-nav">
+				    <li class="active"><a href="#">Inicio <span class="sr-only">(current)</span></a></li>	  
+					<li><a href="#">Flota</a></li>
+					<li><a href="#">Reserva</a></li>
+					<li><a href="#">Empresas</a></li> 	        
+			    </ul>
+			    <ul class="nav navbar-nav navbar-right">
+			        <li><a href="#">Acceso Empleado</a></li>
+			        <li class="dropdown">
+				        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Acceso Administrador <span class="caret"></span></a>
+				        <ul class="dropdown-menu" role="menu">
+				            <form class="form-horizontal">
+								<div class="form-group">
+								    <label for="inputEmail3" class="col-sm-1 control-label">Usuario</label>
+								    <div class="col-sm-10">
+								      	<input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+								    </div>
+								</div>
+								<div class="form-group">
+								    <label for="inputPassword3" class="col-sm-1 control-label">Contraseña</label>
+								    <div class="col-sm-10">
+								      	<input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+								    </div>
+								</div>
+								<div class="form-group">
+								    <div class="col-sm-offset-1 col-sm-1">
+								      	<button type="submit" class="btn btn-default">Sign in</button>
+								    </div>
+								</div>
+							</form>
+				        </ul>
+			        </li>
+			    </ul>
+		    </div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
 	</nav>		
 	
 	<div class="container">
@@ -75,60 +88,60 @@
 			<lateral class="col-md-3">
 				<div class="btn-group-vertical" role="group" aria-label="...">
 				  	<ul class="nav nav-pills nav-stacked">
-					  <li class="letraslateral" role="presentation"><a href="#">Quiénes somos</a></li>
-					  <li role="presentation"><a href="#">Preguntas frecuentes</a></li>
-					  <li role="presentation"><a href="#">Contacto</a></li>
-					  <li role="presentation"><a href="#">Términos y condiciones</a></li>
+						<li class="letraslateral" role="presentation"><a href="#">Quiénes somos</a></li>
+						<li role="presentation"><a href="#">Preguntas frecuentes</a></li>
+						<li role="presentation"><a href="#">Contacto</a></li>
+						<li role="presentation"><a href="#">Términos y condiciones</a></li>
 					</ul>
 				</div>				
 			</lateral>
 			<article class="col-md-9">
 				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 				  <!-- Indicators -->
-				  <ol class="carousel-indicators">
-				    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-				    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-				    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-				    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-				  </ol>
+					<ol class="carousel-indicators">
+					    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+					    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+					    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+					    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+					</ol>
 
 				  <!-- Wrapper for slides -->
-				  <div class="carousel-inner" role="listbox">
-				    <div class="item active">
-				      <img src="img/01.jpg" alt="...">
-				      <div class="carousel-caption">
-				        ...
-				      </div>
-				    </div>
-				    <div class="item">
-				      <img src="img/02.jpg" alt="...">
-				      <div class="carousel-caption">
-				        ...
-				      </div>
-				    </div>
-				    <div class="item">
-				      <img src="img/03.jpg" alt="...">
-				      <div class="carousel-caption">
-				        ...
-				      </div>
-				    </div>
-				    <div class="item">
-				      <img src="img/04.jpg" alt="...">
-				      <div class="carousel-caption">
-				        ...
-				      </div>
-				    </div>
-				  </div>
+					<div class="carousel-inner" role="listbox">
+					    <div class="item active">
+						    <img src="img/01.jpg" alt="...">
+						    <div class="carousel-caption">
+						        ...
+						    </div>
+					    </div>
+					    <div class="item">
+					        <img src="img/02.jpg" alt="...">
+					        <div class="carousel-caption">
+					        	...
+					        </div>
+					    </div>
+					    <div class="item">
+					        <img src="img/03.jpg" alt="...">
+					        <div class="carousel-caption">
+					            ...
+					        </div>
+					    </div>
+					    <div class="item">
+					        <img src="img/04.jpg" alt="...">
+					        <div class="carousel-caption">
+					            ...
+					        </div>
+					    </div>
+					</div>
 
-				  <!-- Controls -->
-				  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-				    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-				    <span class="sr-only">Previous</span>
-				  </a>
-				  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-				    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-				    <span class="sr-only">Next</span>
-				  </a>
+				  	<!-- Controls -->
+					<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+				    	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				    	<span class="sr-only">Previous</span>
+					</a>
+					<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+				    	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				    	<span class="sr-only">Next</span>
+					</a>
 				</div>
 			</article>
 		</div>		
