--- a/App/index.html
+++ b/App/index.html
@@ -4,9 +4,7 @@
 	<meta charset="UTF-8">
 	<title>ATV Rent a Car</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="estilos.css">
 </head>
@@ -33,7 +31,6 @@
 
 	<nav class="navbar navbar-default">
 		<div class="container">
-		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
 			    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 			        <span class="sr-only">Toggle navigation</span>
@@ -44,7 +41,6 @@
 			    <a class="navbar-brand" href="#">ATV Rent a Car</a>
 		    </div>
 
-		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			    <ul class="nav navbar-nav">
 				    <li class="active"><a href="#">Inicio <span class="sr-only">(current)</span></a></li>	  
@@ -79,8 +75,8 @@
 				        </ul>
 			        </li>
 			    </ul>
-		    </div><!-- /.navbar-collapse -->
-		</div><!-- /.container-fluid -->
+		    </div>
+		</div>
 	</nav>		
 	
 	<div class="container">
@@ -97,7 +93,6 @@
 			</lateral>
 			<article class="col-md-9">
 				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-				  <!-- Indicators -->
 					<ol class="carousel-indicators">
 					    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 					    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
@@ -105,35 +100,33 @@
 					    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
 					</ol>
 
-				  <!-- Wrapper for slides -->
 					<div class="carousel-inner" role="listbox">
 					    <div class="item active">
-						    <img src="img/01.jpg" alt="...">
+						    <img src="img/01.jpg">
 						    <div class="carousel-caption">
 						        ...
 						    </div>
 					    </div>
 					    <div class="item">
-					        <img src="img/02.jpg" alt="...">
+					        <img src="img/02.jpg">
 					        <div class="carousel-caption">
 					        	...
 					        </div>
 					    </div>
 					    <div class="item">
-					        <img src="img/03.jpg" alt="...">
+					        <img src="img/03.jpg">
 					        <div class="carousel-caption">
 					            ...
 					        </div>
 					    </div>
 					    <div class="item">
-					        <img src="img/04.jpg" alt="...">
+					        <img src="img/04.jpg">
 					        <div class="carousel-caption">
 					            ...
 					        </div>
 					    </div>
 					</div>
 
-				  	<!-- Controls -->
 					<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
 				    	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 				    	<span class="sr-only">Previous</span>
@@ -146,9 +139,17 @@
 			</article>
 		</div>		
 	</div>
+	<br>
+	<footer>
+		<div class="container">
+			<pie class="footer col-md-12 text-center">
+				<p>
+					2015 ATV Rent a Car - Todos los derechos reservados
+				</p>
+			</pie>			
+		</div>		
+	</footer>
 
-
-	<!-- Latest compiled and minified JavaScript -->
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
