--- a/App/index.html
+++ b/App/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>ATV Rent a Car</title>
+	<link rel="shortcut icon" href="img/shortcut.jpg">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
@@ -49,9 +50,13 @@
 					<li><a href="#">Empresas</a></li> 	        
 			    </ul>
 			    <ul class="nav navbar-nav navbar-right">
-			        <li><a href="#">Acceso Empleado</a></li>
+			        <li>
+			        	<a href="#">Acceso Empleado</a>
+			        </li>
 			        <li class="dropdown">
-				        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Acceso Administrador <span class="caret"></span></a>
+				        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Acceso Administrador 
+				        	<span class="caret"></span>
+				        </a>
 				        <ul class="dropdown-menu" role="menu">
 				            <form class="form-horizontal">
 								<div class="form-group">
